[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelineclient_mk"
version = "0.0.1"
authors = [
  { name="Fernando Cano", email="fcanocollab@gmail.com" }
]
description = "A high performance http gateway to pipeline/throttle requests downstream http endpoint."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fernandocano/requestpipe"
"Bug Tracker" = "https://github.com/fernandocano/requestpipe/issues"
